@@ -182,7 +182,7 @@ public:
 	virtual void PreRender(Sur * const psur) = 0;
 	virtual void Render(Sur * const psur) = 0;
 	virtual void RenderBlueprint(Sur *psur);
-    virtual void ExportMesh() {}
+   virtual void ExportMesh(FILE *f) {}
 	
 	virtual ULONG STDMETHODCALLTYPE AddRef() = 0;
 	virtual ULONG STDMETHODCALLTYPE Release() = 0;
